# concurrentes-alglobo2

./: .gitignore  Cargo.toml  README.md  enunciado.md  pandoc_headers.md
.github/workflows/: rust.yml
docs/: .rustc_info.json  index.html
docs/doc/: crates.js  search-index.js  settings.html  source-files.js
docs/doc/agents/: all.html  fn.create_listener.html  fn.main.html  fn.psycho_agent_killer.html  index.html  sidebar-items.js
docs/doc/agents/agent/: index.html  sidebar-items.js  struct.Agent.html
docs/doc/agents/communication/: constant.ABORT.html  constant.ACK.html  constant.COMMIT.html  constant.FINISH.html  constant.PAYMENT_ERR.html  constant.PAYMENT_OK.html  constant.PREPARE.html  index.html  struct.DataMsg.html  type.DataMsgBytes.html
docs/doc/agents/logger/: constant.PREFIX_PATH.html  enum.LogLevel.html  index.html  struct.Logger.html
docs/doc/agents/utils/: constant.AGENTS_FILE.html  fn.agent_get_name.html  fn.agent_get_port.html  fn.agent_get_success_rate.html  fn.create_empty_csv.html  fn.csv_to_prices.html  fn.get_agents.html  fn.get_agents_ports.html  fn.write_to_csv.html  index.html
docs/doc/alglobo/: all.html  fn.main.html  fn.psycho_node_killer.html  index.html  sidebar-items.js
docs/doc/alglobo/alglobo_node/: constant.MSG_ACK.html  index.html  (+9 more)
docs/doc/informe/: all.html  fn.main.html  index.html
logs/: airline.txt  bank.txt  hotel.txt
src/: agent.rs  agents.rs  agents.yaml  alglobo.rs  alglobo_node.rs  communication.rs  constants.rs  informe.rs  leader_election.rs  lider_election.rs  logger.rs  prices.csv  ring.rs  utils.rs
(+49 files in other folders)
