[package]
name = "alglobo-pagos"
version = "0.1.0"
edition = "2018"
default-run = "alglobo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
serde = "1.0"
serde_yaml = "0.8"
chrono = "0.4"

[[bin]]
name = "alglobo"
path = "src/alglobo.rs"

[[bin]]
name = "agents"
path = "src/agents.rs"

[[bin]]
name = "informe"
path = "src/informe.rs"
